--- a/ConsoleGraphics/ConsoleGraphics.vcxproj.filters
+++ b/ConsoleGraphics/ConsoleGraphics.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RenderConsole.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RenderSurface.h">
