Add Clock class - Ability to measure frametime - Add Sprite::move(Vec2f) to move sprite smoothly with time and speed

--- a/ConsoleGraphics/ConsoleGraphics.vcxproj
+++ b/ConsoleGraphics/ConsoleGraphics.vcxproj
@@ -158,6 +158,7 @@
   <ItemGroup>
     <ClInclude Include="bitmap_image.hpp" />
     <ClInclude Include="cg.h" />
+    <ClInclude Include="Clock.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="Console.h" />
     <ClInclude Include="Event.h" />
