--- a/ConsoleGraphics/ConsoleGraphics.vcxproj.filters
+++ b/ConsoleGraphics/ConsoleGraphics.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClInclude Include="ReourceHolder.h">
       <Filter>Header Files\Core</Filter>
     </ClInclude>
+    <ClInclude Include="FrameAnimation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
