Implement Animator class

--- a/ConsoleGraphics/ConsoleGraphics.vcxproj.filters
+++ b/ConsoleGraphics/ConsoleGraphics.vcxproj.filters
@@ -89,5 +89,8 @@
     <ClInclude Include="FrameAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Animator.h">
+      <Filter>Header Files\Core</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
